<resources>
    <string name="app_name">Заказ</string>
    <string name="logo_cafe">Лого кафе</string>
    <string name="invitation">Добро пожаловать!</string>
    <string name="input_user"></string>
    <string name="default_name">Клиент</string>
    <string name="default_password">пароль</string>
    <string name="input_password">Ввод пароля</string>
    <string name="button_order">Создать заказ</string>
    <string name="user_name">Имя</string>
    <string name="toast_messege_warning">Все поля должны быть заполнены</string>
    <string name="what_add_to_your_drink">Что добавить?</string>
    <string name="hello_client_you_choose">Привет, %s. Что вы хотите добавить…</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="select_type_of_drink">Выберите напиток</string>
    <string name="send_order_description">Создать заказ</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВыбранный напиток:%s</string>
    <string name="necessary_adds">Добавки:</string>

    <string-array name="option_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>
    <string-array name="option_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>